
*** New function `keymap-prompt' returns the prompt string of a keymap.

*** (map-keymap FUNCTION KEYMAP) applies the function to each binding
in the keymap.

*** New variable `emulation-mode-map-alists'.

Lisp packages using many minor mode keymaps can now maintain their own
keymap alist separate from `minor-mode-map-alist' by adding their
keymap alist to this list.

** Abbrev changes:

+++
*** The new function `copy-abbrev-table' copies an abbrev table.

It returns a new abbrev table that is a copy of a given abbrev table.

+++
*** `define-abbrev' now accepts an optional argument SYSTEM-FLAG.

If non-nil, this marks the abbrev as a "system" abbrev, which means
that it won't be stored in the user's abbrevs file if he saves the
abbrevs.  Major modes that predefine some abbrevs should always
specify this flag.

+++
** Enhancements to process support

*** Function `list-processes' now has an optional argument; if non-nil,
it lists only the processes whose query-on-exit flag is set.

*** New fns `set-process-query-on-exit-flag' and `process-query-on-exit-flag'.

These replace the old function `process-kill-without-query'.  That
function is still supported, but new code should use the new
functions.

*** Function `signal-process' now accepts a process object or process
name in addition to a process id to identify the signaled process.

*** Processes now have an associated property list where programs can
maintain process state and other per-process related information.

Use the new functions `process-get' and `process-put' to access, add,
and modify elements on this property list.  Use the new functions
`process-plist' and `set-process-plist' to access and replace the
entire property list of a process.

*** Function `accept-process-output' has a new optional fourth arg
JUST-THIS-ONE.  If non-nil, only output from the specified process
is handled, suspending output from other processes.  If value is an